--- a/style.css
+++ b/style.css
@@ -8900,7 +8900,7 @@ body:not(.device-touch) .social-icon i {
 	display: block;
 	position: relative;
 	line-height: 21px;
-	padding: 0 0 0 24px;
+	padding: 0 30px 0 24px;
 	margin: 0;
 	font-size: 21px;
 	font-weight: 300;
